--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:xSupAGvLrHZ915eOp4x2FxHKHsSKiI7VSjHPZXyOI6U=
+APP_KEY=base64:WnUVjD9X+sPArj+3/qaKvps5oQeuzgMvm7n6jHGZQHU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravel_traning
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Tiger@123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
